--- a/src/App.css
+++ b/src/App.css
@@ -167,7 +167,7 @@ font-size: 12px;
     background-color:rgba(0,0,0,0.2);
 
     display: flex;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
   }
 
@@ -175,9 +175,8 @@ font-size: 12px;
   .popup-inner{
     position: relative;
     border-radius:"50px";
-    margin-top:530px;
-    height:700px;
-    width: 100%;
+    height:550px;
+    width: 800px;
     right:3%;
     max-width: 640px;
     background-color:#fff;
@@ -194,4 +193,81 @@ font-size: 12px;
 .first-msg{
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
+}
+
+
+.login-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+
+
+@media only screen and (max-width: 650px) {
+  .signin_body{
+    height:500px !important;
+    width:400px !important;
+  }
+
+  .credential{
+    margin-top:10px !important;
+    margin: 0 auto !important;
+  }
+}
+
+
+
+/* signin_content */
+.signup-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  padding: 40px;
+}
+
+/* For Signup */
+@media (min-width: 650px) {
+  .signup {
+    background-position: center center;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .signup_body{
+    height:700px !important;
+    width:400px !important;
+  }
+
+  .new{
+    margin: 10px auto !important;
+    text-align: center !important;
+  }
+}
+
+@media (min-width: 410px) {
+  .signup {
+    background-position: center center;
+  }
+}
+
+@media only screen and (max-width: 410px) {
+  .signup{
+    
+  }
+  .signup_body{
+    margin-top: -15px !important;
+    height:600px !important;
+    width:350px !important;
+    padding: 0 auto;
+  }
+
+  .heading{
+    margin-bottom: -2rem !important;
+  }
+  
 }
